# docs_search_test_case

./: .env  .gitignore  README.md  alembic.ini  docker-compose.yml  docs.json  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py
app/db/: session.py
app/models/: documents.py
app/routers/: search.py
app/schemas/: documents.py
app/search/: elasticsearch_service.py
migrations/: env.py
migrations/versions/: 31bdd2f130b9_create_documents_table.py  fc5b768d2aac_create_documents_table.py
scripts/: load_data.py  reindex_to_es.py
